# ShadowPayrollAgent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-fixes/: 01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-multi-country-estimation/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-decision-experience/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md
src/shadow_payroll/: __init__.py  calculations.py  config.py  corporate_theme.css  estimator.py  excel_exporter.py  llm_handler.py  models.py  pdf_exporter.py  scenarios.py  ui.py  utils.py
tests/: conftest.py  test_calculations.py  test_excel_exporter.py  test_llm_handler.py  test_models.py  test_ui.py  test_utils.py
